spacing and wrapping fixes on gtoc checkbox list

--- a/styles/pages/_gtoc-page.scss
+++ b/styles/pages/_gtoc-page.scss
@@ -78,23 +78,24 @@
 
       label {
         padding-bottom: 20px;
+        color: $fn-black;
 
-        strong {
-          display: inline-block;
-          vertical-align: top;
-          margin-left: 5px;
-
-          + span {
-            display: inline-block;
-            width: 100%;
-            margin-left: 30px;
-          }
+        .label-text-normal {
+          display: block;
+          width: 100%;
         }
 
-        .label-text {
+        strong {
+          vertical-align: top;
+          margin-left: 5px;
+          width: 20%;
+        }
+
+        span.label-text-normal {
+          display: inline-block;
           font-weight: $fn-normal-weight;
-          //override default alert text color
-          color: $fn-black;
+          width: 75%;
+          float: right;
         }
       }
 
@@ -125,6 +126,10 @@
       h1 {
         margin: 3rem 0;
       }
+
+      fieldset .checkbox label span.label-text-normal {
+        width: 90%;
+      }
     }
   }
 }
@@ -141,19 +146,6 @@
 
       .select-all-button {
         top: 8px;
-      }
-
-      .checkbox {
-        label {
-          strong {
-            width: 15%;
-
-            + span {
-              width: 75%;
-              margin-left: 0;
-            }
-          }
-        }
       }
     }
   }
